--- a/opm2zms.html
+++ b/opm2zms.html
@@ -10,13 +10,14 @@
 <body>
     <h1>opm2zms</h1>
 
-    This converts .opm sound banks (like those used in <a href="http://picopicose.com/software.html">VOPM / VOPMex</a>) to a Z-Music 2 instruments.
+    This converts VOPM</a> .opm sound banks to a Z-Music 2 instruments.<br>
+    For more information, refer to <a href="https://github.com/MattKuebrich/zms-tools">zms-tools on GitHub</a>.
     <p>
-    <textarea id="opmInput" rows="10" cols="60" placeholder="Paste opm data here..."></textarea>
+    <textarea id="opmInput" rows="10" cols="60" placeholder="Paste OPM data here..."></textarea>
     <br><br>
     <button onclick="convert()">Convert to ZMS</button>
     <br><br>
-    <textarea id="zmsOutput" rows="10" cols="60" placeholder="zms output will appear here..."></textarea>
+    <textarea id="zmsOutput" rows="10" cols="60" placeholder="ZMS output will appear here..."></textarea>
     <br><br>
     <button onclick="downloadZMS()">Download ZMS File</button>
 
