--- a/zms2opm.html
+++ b/zms2opm.html
@@ -12,9 +12,9 @@
 
     This converts Z-Music 2 instruments to <a
     href="http://picopicose.com/software.html">VOPM</a> .opm sound banks. <br>
-        For more information, refer to <a href="https://github.com/MattKuebrich/zmstools">zmstools on GitHub</a>.
+        For more information, refer to <a href="https://github.com/MattKuebrich/zms-tools">zms-tools on GitHub</a>.
     <p>
-        <textarea id="zmsInput" rows="10" cols="60" placeholder="Paste zms instrument definitions here..."></textarea>
+        <textarea id="zmsInput" rows="10" cols="60" placeholder="Paste ZMS instrument definitions here..."></textarea>
         <br><br>
         <button onclick="convert()">Convert to OPM</button>
         <br><br>
